Correction of the image that is misaligned with low resolutions

--- a/src/Login/Login.css
+++ b/src/Login/Login.css
@@ -1,5 +1,5 @@
 .credentials {
-    position: fixed;
+    position: absolute;
     bottom: 15px;
     right: 10px;
     color: #ffffff;
@@ -8,7 +8,8 @@
     vertical-align:middle;
 }
 #LoginForm .ms-row {
-    margin: 25px auto
+    margin: 25px auto;
+    margin-bottom: 120px;
 }
 #ValidateAccount {
     width: 50%;
@@ -23,6 +24,10 @@
     display: flex;
     justify-content: center;
     align-items: center;
+}
+.section1 img {
+    max-width: 100%;
+    height: auto;
 }
 .section2{
     background-color: #F2F2F2;
